2001-11-02 Alexander Rawass <alexannika@users.sourceforge.net>

	* added file src/mission_script.cpp (not yet compilable)
	* started to write mission scripting
	* started to write documentation for mission scripting
	

2001-11-01 Daniel Horn <hellcatv@hotmail.com>

	* added Polygon Offset and employed its use for Logos... now they don't fade behind other polygons
	* changed Z-buffer to be GL_LESS to prevent saturn's rings from "peeking" out behind saturn
	

2001-11-01 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added setVariable to config_xml

2001-11-01 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* tried to match Daniel's request for color sections
	* transformed easyDomFactory to template class
	* modified config_xml to use configNode instead of easyDomNode
	* modified colors to have sections
	
	
2001-10-31 Daniel Horn <hellcatv@hotmail.com>

	* happy halloween!
	* added ship_ambient and planet_ambient into the picture
	* of course I set them both to 0 :-)
	* added halo parameters
	* made turrets work with multiple subunits
	* put in sample turret with sample carrier
	* carrier has BSP problems due to self intersection...
	
2001-10-31 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified doxygenConfig to show comments in source
	* modified TODO
	* added getVariable to Mission
	* modified Universe to have Init(string filename)
	* modified main.cpp to load the system that's defined
	  as 'system' in the mission file
	* removed data/test.xml
	* added data/sol.system (former test.xml)
	* added error msg to star_system_xml if system file not found
	* added used variables to vegastrike.config

	
2001-10-27 Daniel Horn <hellcatv@hotmail.com>
2001-10-28 Daniel Horn <hellcatv@hotmail.com>
2001-10-29 Daniel Horn <hellcatv@hotmail.com>

	* ported to windows (sound et all)
	* added Direct3DSound support for windoze hardware acceleration
	* added doppler effect (off by default) to config & aldrv lib