@@ -1,5 +1,5 @@
 -------------------------------
-Vegastrike 0.0.9 Documentation
+Vegastrike 0.1.0 Documentation
 -------------------------------
 
 Basic Organization of Vegastrike
