@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/vegastrike.h)
-AM_INIT_AUTOMAKE(vegastrike, "0.0.9cvs")
+AM_INIT_AUTOMAKE(vegastrike, "0.1.0")
 AM_CONFIG_HEADER(config.h)
 
 dnl Check system type
