@@ -51,7 +51,7 @@ public:
         void GetView (Matrix);
         const Vector & GetR () {return R;}
 	void GetPQR (Vector &p1, Vector &q1, Vector &r1);
-	void UpdateGFX(GFXBOOL updateFrustum=true);
+	void UpdateGFX(GFXBOOL clip= GFXTRUE, GFXBOOL updateFrustum=GFXTRUE);
 	void UpdateGLCenter();
 
 	void SetPosition(const Vector &origin);
